display seat number, align correctly

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -68,6 +68,7 @@
   margin-bottom: 10px;
   border: 1px solid #707070;
   display: inline-flex;
+  justify-content: center;
 }
 
 .green-square {
@@ -78,6 +79,7 @@
   margin-bottom: 10px;
   border: 1px solid #707070;
   display: inline-flex;
+  justify-content: center;
 }
 .high-seat{
   margin-top:9%;
